/*
 * This file is part of the Pazzk project <https://pazzk.net/>.
 * Copyright (c) 2025 Pazzk <team@pazzk.net>.
 *
 * Community Version License (GPLv3):
 * This software is open-source and licensed under the GNU General Public
 * License v3.0 (GPLv3). You are free to use, modify, and distribute this code
 * under the terms of the GPLv3. For more details, see
 * <https://www.gnu.org/licenses/gpl-3.0.en.html>.
 * Note: If you modify and distribute this software, you must make your
 * modifications publicly available under the same license (GPLv3), including
 * the source code.
 *
 * Commercial Version License:
 * For commercial use, including redistribution or integration into proprietary
 * systems, you must obtain a commercial license. This license includes
 * additional benefits such as dedicated support and feature customization.
 * Contact us for more details.
 *
 * Contact Information:
 * Maintainer: 권경환 Kyunghwan Kwon (on behalf of the Pazzk Team)
 * Email: k@pazzk.net
 * Website: <https://pazzk.net/>
 *
 * Disclaimer:
 * This software is provided "as-is", without any express or implied warranty,
 * including, but not limited to, the implied warranties of merchantability or
 * fitness for a particular purpose. In no event shall the authors or
 * maintainers be held liable for any damages, whether direct, indirect,
 * incidental, special, or consequential, arising from the use of this software.
 */

#include "relay.h"
#include "libmcu/compiler.h"

struct relay *relay_create(struct lm_pwm_channel *pwm_handle)
{
	unused(pwm_handle);
	return 0;
}

void relay_destroy(struct relay *self)
{
	unused(self);
}

int relay_enable(struct relay *self)
{
	unused(self);
	return 0;
}

int relay_disable(struct relay *self)
{
	unused(self);
	return 0;
}

void relay_turn_on(struct relay *self)
{
	unused(self);
}

void relay_turn_off(struct relay *self)
{
	unused(self);
}

void relay_turn_on_ext(struct relay *self,
        uint8_t pickup_pct, uint16_t pickup_delay_ms, uint8_t hold_pct)
{
	unused(self);
	unused(pickup_pct);
	unused(pickup_delay_ms);
	unused(hold_pct);
}
